--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>MY PERSONAL WEBSITE</div>
+
+    <div class="header">
+        <div class="header_container">
+            <div class="header_logo">
+                <img class="website_logo" src="code-guy.png" alt="Website Logo">
+                <div><a href="">KevinKhuu.io</a></div>
+            </div>
+            <div class="header_title">
+                <div>A Personal Website</div>
+            </div>
+            <div class="header_links">
+                <ul class="header_list">
+                    <li class="header_link"><a href="">Home</a></li>
+                    <li class="header_link"><a href="">Projects</a></li>
+                    <li class="header_link"><a href="">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
