Added layer two
Layer two contains a portfolio of my projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="header_container">
             <div class="header_logo">
-                <img class="website_logo" src="code-guy.png" alt="Website Logo">
+                <img class="website_logo" src="icons8-code-100.png" alt="Website Logo">
                 <div><a href="">KevinKhuu.io</a></div>
             </div>
             <div class="header_title">
@@ -23,6 +23,39 @@
                     <li class="header_link"><a href="">Projects</a></li>
                     <li class="header_link"><a href="">About</a></li>
                 </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="layer_one">
+        <div class="l1_container">
+            <div class="website_description">
+                <div class="website_description_title">Hey, I'm Kevin Khuu</div>
+                <div class="website_description_text">Welcome to my website!</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="layer_two">
+        <div class="l2_container">
+            <div class="project_title">Projects</div>
+            <div class="project_elements">
+                <div class="project">
+                    <img class="project_img" src="hangman_514163.png" alt="Hangman">
+                    <div class="project_caption">Hangman</div>
+                </div>
+                <div class="project">
+                    <img class="project_img" src="music.png" alt="">
+                    <div class="project_caption">Text-based Music Player</div>
+                </div>
+                <div class="project">
+                    <img class="project_img" src="calculator.png" alt="">
+                    <div class="project_caption">Calculator</div>
+                </div>
+                <div class="project">
+                    <img class="project_img" src="scissors.png" alt="">
+                    <div class="project_caption">Rock Paper Scissors</div>
+                </div>
             </div>
         </div>
     </div>
