--- a/index.html
+++ b/index.html
@@ -60,5 +60,11 @@
         </div>
     </div>
 
+    <div class="footer">
+        <div class="footer_container">
+            <div class="copyright">Made By: <a href="https://github.com/KevinKhuu27">KevinK27</a></div>
+        </div>
+    </div>
+
 </body>
 </html>
