Made some touches on the footer and project links

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="project">
                     <img class="project_img" src="calculator.png" alt="">
-                    <div class="project_caption">Calculator</div>
+                    <div class="project_caption"><a href="KevinKhuu27_calculator/index.html">Calculator</a></div>
                 </div>
                 <div class="project">
                     <img class="project_img" src="scissors.png" alt="">
@@ -62,7 +62,7 @@
 
     <div class="footer">
         <div class="footer_container">
-            <div class="copyright">Made By: <a href="https://github.com/KevinKhuu27">KevinK27</a></div>
+            <div class="copyright">Made By: <a href="https://github.com/KevinKhuu27">KevinKhuu27</a></div>
         </div>
     </div>
 
