--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="footer">
         <div class="footer_container">
-            <div class="copyright">Made By: <a href="https://github.com/KevinKhuu27">KevinK27</a></div>
+            <div class="copyright">Made By: <a href="https://github.com/KevinKhuu27">KevinKhuu27</a></div>
         </div>
     </div>
 
