--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="project">
                     <img class="project_img" src="calculator.png" alt="">
-                    <div class="project_caption"><a href="KevinKhuu27_calculator/index.html">Calculator</a></div>
+                    <div class="project_caption">Calculator</div>
                 </div>
                 <div class="project">
                     <img class="project_img" src="scissors.png" alt="">
