Added a link to the rock paper scissors project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="project">
                     <img class="project_img" src="scissors.png" alt="">
-                    <div class="project_caption">Rock Paper Scissors</div>
+                    <div class="project_caption"><a href="https://github.com/KevinKhuu27/odin_rockpaperscissors/commits/main">Rock Paper Scissors</a></div>
                 </div>
             </div>
         </div>
