Added About me section
Constists of a picture and description about me

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <div class="header_links">
                 <ul class="header_list">
                     <li class="header_link"><a href="">Home</a></li>
-                    <li class="header_link"><a href="">Projects</a></li>
-                    <li class="header_link"><a href="">About</a></li>
+                    <li class="header_link"><a href="#projects_anchor">Projects</a></li>
+                    <li class="header_link"><a href="#about_anchor">About</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="layer_one">
+    <div class="layer_one" id="layer_welcome">
         <div class="l1_container">
             <div class="website_description">
                 <div class="website_description_title">Hey, I'm Kevin Khuu</div>
@@ -36,9 +36,10 @@
         </div>
     </div>
 
-    <div class="layer_two">
+    <div class="layer_two" id="layer_projects">
         <div class="l2_container">
-            <div class="project_title">Projects</div>
+            <a id="projects_anchor"></a>
+            <div class="project_title"><h2>Projects</h2></div>
             <div class="project_elements">
                 <div class="project">
                     <img class="project_img" src="hangman_514163.png" alt="Hangman">
@@ -59,6 +60,23 @@
             </div>
         </div>
     </div>
+
+    <div class="layer_three" id="layer_about">
+        <div class="l2_container">
+            <a id="about_anchor"></a>
+            <div class="about_title"><h2>About Me</h2></div>
+            <div class="about_content">
+                <div><img class="about_img" src="IMG_4589.jpg" alt="Self Image"></div>
+                <div class="about_text">
+                    <p>Hi, I'm Kevin Khuu, an aspiring software engineer! I currently study Computer Science at Toronto Metropolitan University (formerly Ryerson).</p>
+                    <p>After discovering coding through Scratch in elementary school, I've been interested in pursuing a career in the field of computer science. Through the majority of high school, I continued to study computer science, exposing myself to new languages and concepts.</p>
+                    <p>Outside of academia, I enjoy trying new things. Some of the most memorable experiences I've had include kayaking, treetop trekking, and bouldering. Some of the things I still want to experience are travelling to a different country, paintballing, and go-karting.</p>
+                    <p>I am always eager to learn new skills and ideas. Whether it's on my own, or with others, I have always found enjoyment in improving. I look forward to what the future may hold and the opportunities that come.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
     <div class="footer">
         <div class="footer_container">
