--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <div class="header_links">
                 <ul class="header_list">
                     <li class="header_link"><a href="">Home</a></li>
-                    <li class="header_link"><a href="#projects_anchor">Projects</a></li>
-                    <li class="header_link"><a href="#about_anchor">About</a></li>
+                    <li class="header_link"><a href="#projects">Projects</a></li>
+                    <li class="header_link"><a href="#about">About</a></li>
+                    <li class="header_link"><a href="#connect">Connect</a></li>
                 </ul>
             </div>
         </div>
@@ -38,8 +39,8 @@
 
     <div class="layer_two" id="layer_projects">
         <div class="l2_container">
-            <a id="projects_anchor"></a>
-            <div class="project_title"><h2>Projects</h2></div>
+            <a id="projects"></a>
+            <div class="project_title"><h2 id="h2_projects">Projects</h2></div>
             <div class="project_elements">
                 <div class="project">
                     <img class="project_img" src="hangman_514163.png" alt="Hangman">
@@ -63,8 +64,8 @@
 
     <div class="layer_three" id="layer_about">
         <div class="l2_container">
-            <a id="about_anchor"></a>
-            <div class="about_title"><h2>About Me</h2></div>
+            <a id="about"></a>
+            <div class="about_title"><h2 id="h2_about">About Me</h2></div>
             <div class="about_content">
                 <div><img class="about_img" src="IMG_4589.jpg" alt="Self Image"></div>
                 <div class="about_text">
@@ -76,8 +77,16 @@
             </div>
         </div>
     </div>
-    
 
+    <div class="layer_one" id="layer_four">
+        <div class="l2_container">
+            <a id="connect"></a>
+            <div class="connect_title"><h2 id="h2_connect">Connect With Me</h2></div>
+            <div id="contact_info">
+            </div>
+        </div>
+    </div>
+    
     <div class="footer">
         <div class="footer_container">
             <div class="copyright">Made By: <a href="https://github.com/KevinKhuu27">KevinKhuu27</a></div>
