--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         <div class="l2_container">
             <a id="connect"></a>
             <div class="connect_title"><h2 id="h2_connect">Connect With Me</h2></div>
-            <div id="contact_info">
+            <div class="contact_info">
+                <a href=""><img class="img_connect" src="linkedin-logo.png" alt="LinkedIn"></a>
+                <a href=""><img class="img_connect" src="github.png" alt="GitHub"></a>
+                <a href=""><img class="img_connect" src="instagram-logo.png" alt="Instagram"></a>
             </div>
         </div>
     </div>
