--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <a id="connect"></a>
             <div class="connect_title"><h2 id="h2_connect">Connect With Me</h2></div>
             <div class="contact_info">
-                <a href=""><img class="img_connect" src="linkedin-logo.png" alt="LinkedIn"></a>
-                <a href=""><img class="img_connect" src="github.png" alt="GitHub"></a>
-                <a href=""><img class="img_connect" src="instagram-logo.png" alt="Instagram"></a>
+                <a href="https://www.linkedin.com/in/kevin-khuu-273564277/"><img class="img_connect" src="linkedin-logo.png" alt="LinkedIn"></a>
+                <a href="https://github.com/KevinKhuu27"><img class="img_connect" src="github.png" alt="GitHub"></a>
+                <a href="https://www.instagram.com/khuu.kevin27/"><img class="img_connect" src="instagram-logo.png" alt="Instagram"></a>
             </div>
         </div>
     </div>
