Changed projects links to redirect to actual website

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 </div>
                 <div class="project">
                     <img class="project_img" src="calculator.png" alt="">
-                    <div class="project_caption"><a href="https://github.com/KevinKhuu27/KevinKhuu27_calculator">Calculator</a></div>
+                    <div class="project_caption"><a href="https://kevinkhuu27.github.io/KevinKhuu27_calculator/">Calculator</a></div>
                 </div>
                 <div class="project">
                     <img class="project_img" src="scissors.png" alt="">
-                    <div class="project_caption"><a href="https://github.com/KevinKhuu27/odin_rockpaperscissors/commits/main">Rock Paper Scissors</a></div>
+                    <div class="project_caption"><a href="https://kevinkhuu27.github.io/odin_rockpaperscissors/">Rock Paper Scissors</a></div>
                 </div>
             </div>
         </div>
